<resources>
    <string name="app_name">WSK_Police</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="remember_me">remember me</string>
    <string name="guest">Guest</string>
    <string name="request">request</string>
    <string name="message_alert_dialog">...</string>
    <string name="captcha_uncorrected">Captcha uncorrected</string>

    <string name="main">Main</string>
    <string name="departments">Departments</string>
    <string name="show_department">Show department</string>
    <string name="wanted">Wanted</string>
    <string name="add_new_wanted">Add New Wanted</string>
    <string name="item_name">item name</string>
    <string name="about_us">about us</string>
    <string name="second_text">second text</string>
    <string name="department_name">Department name:</string>
    <string name="boss">Boss:</string>
    <string name="address">Address:</string>

</resources>
