<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".singIn.SingInActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/logo_image"
            android:text="@string/app_name"
            android:textColor="@color/headerColor" android:textSize="45sp" android:id="@+id/app_name"/>
    <ImageView
            android:layout_width="165dp"
            android:layout_height="122dp" app:srcCompat="@drawable/police"
            android:id="@+id/logo_image" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.479"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/app_name" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/login_layout" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:visibility="gone">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/key"
                android:hint="@string/login"
                android:drawablePadding="16dp"
                android:ems="10"
                android:id="@+id/login_edit" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/password_edit" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/login_edit" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"

                app:layout_constraintVertical_bias="0.018"/>
        <CheckBox
                android:text="@string/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/check_remember_me"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/password_edit"/>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/check_remember_me" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                android:id="@+id/login_button_layout" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:visibility="visible">

            <Button
                    android:hint="@string/guest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/guest_button" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintTop_toBottomOf="@id/log_in_button" android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button" android:textColorHint="@android:color/white"/>
            <Button
                    android:hint="@string/common_signin_button_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/log_in_button" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/Widget.AppCompat.Button"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white" android:textColorHint="@android:color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/check_remember_me" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                android:id="@+id/captcha_layout" android:visibility="gone">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/captcha_edit"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/captcha_image" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_popup_sync"
                    android:id="@+id/new_captcha_button"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/captcha_edit"
                    app:layout_constraintVertical_bias="1.0"/>
            <Button
                    android:hint="@string/common_signin_button_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    style="@style/Widget.AppCompat.Button"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white" android:textColorHint="@android:color/white"
                    android:id="@+id/captcha_check_button" android:text="@android:string/ok"
                    app:layout_constraintTop_toBottomOf="@+id/captcha_edit"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:srcCompat="@android:drawable/bottom_bar"
                    android:id="@+id/captcha_image"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/new_captcha_button"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>