<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".departments.showDepartment.ShowDepartment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/customAppBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/contentLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/constraintLayout"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/phone" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button">

            <TextView
                    android:text="Description:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/boss6"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/description" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/boss6" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
                android:text="ivan petrovich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boss"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="+71122334455"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/boss4" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/department_name" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/boss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/address" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="rere@gmail.ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@+id/phone"
                android:layout_marginStart="68dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/boss3"/>
        <Button
                android:text="Show"
                android:layout_width="201dp"
                android:layout_height="56dp"
                android:id="@+id/button"
                android:background="@color/colorPrimaryDark" android:textColor="@color/white"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="street 123"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="Gromovo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/department_name"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="Phone:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boss4"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/boss" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="E-mail:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boss3"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/boss" android:layout_marginEnd="136dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/department_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ru.petrolplus.wsk_police.common.views.CustomAppBar android:layout_width="0dp"
                                                        android:layout_height="wrap_content"
                                                        app:layout_constraintTop_toTopOf="parent"
                                                        app:layout_constraintEnd_toEndOf="parent"
                                                        app:layout_constraintStart_toStartOf="parent"
                                                        android:id="@+id/customAppBar"
                                                        app:back_button_visible="true"
                                                        app:header_text="@string/show_department"/>

</androidx.constraintlayout.widget.ConstraintLayout>